// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtensionToggle extension disabled in settings 1`] = `
<button
  aria-checked={false}
  className="toggleBig container"
  data-test="extension-toggle-x/y"
  disabled={false}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="switch"
  title="Click to enable"
  type="button"
  value={0}
>
  <span
    className="bar"
  />
  <span
    className="barShadow"
  />
  <span
    className="d-flex flex-column justify-content-center align-items-center knob"
  />
  <span
    className="text"
  >
    Disabled
  </span>
</button>
`;

exports[`ExtensionToggle extension enabled in settings 1`] = `
<button
  aria-checked={true}
  className="toggleBig container"
  data-test="extension-toggle-x/y"
  disabled={false}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="switch"
  title="Click to disable"
  type="button"
  value={1}
>
  <span
    className="bar barOn"
  />
  <span
    className="barShadow barShadowOn"
  />
  <span
    className="d-flex flex-column justify-content-center align-items-center knob knobOn"
  >
    <svg
      className="mdi-icon iconOn"
      fill="currentColor"
      height={16}
      viewBox="0 0 24 24"
      width={16}
    >
      <path
        d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
      />
    </svg>
  </span>
  <span
    className="text textOn"
  >
    Enabled
  </span>
</button>
`;

exports[`ExtensionToggle extension not present in settings 1`] = `
<button
  aria-checked={false}
  className="toggleBig container"
  data-test="extension-toggle-x/y"
  disabled={false}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="switch"
  title="Click to enable"
  type="button"
  value={0}
>
  <span
    className="bar"
  />
  <span
    className="barShadow"
  />
  <span
    className="d-flex flex-column justify-content-center align-items-center knob"
  />
  <span
    className="text"
  >
    Disabled
  </span>
</button>
`;
